// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`health i18n golden (GH #6 Phase-2 contract) > darwin: full prose + emitted i18n keys/params 1`] = `
[
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Use this only for trusted local workflows.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:project-permission-bypass",
    "message": "permissionMode is set to bypassPermissions.",
    "params": undefined,
    "suggestion": "Use this only for trusted local workflows.",
    "title": "Claude Code bypass permissions enabled",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Remove shell or move the full command into command when shell selection matters.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-hook-shell-ignored-with-args",
    "message": "A command hook defines args and shell; Claude Code ignores shell in this shape.",
    "params": undefined,
    "suggestion": "Remove shell or move the full command into command when shell selection matters.",
    "title": "Claude hook shell is ignored when args are set",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Prefer narrower command allow rules.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-permission-broad-bash",
    "message": "permissions.allow contains Bash(*).",
    "params": undefined,
    "suggestion": "Prefer narrower command allow rules.",
    "title": "Broad Bash permission rule",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Add the official Claude Code settings schema near the top of the JSON file.",
      "label": "Add Claude settings schema",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-settings-schema-missing",
    "message": "settings.json does not declare the Claude Code settings JSON schema.",
    "params": undefined,
    "suggestion": "Add $schema if you want editor validation for Claude Code settings.",
    "title": "Claude settings schema is not declared",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Add a Claude memory import for the shared project instructions.",
      "label": "Import AGENTS.md",
    },
    "i18nKeys": undefined,
    "id": "claude-code:reference:project-agents-md-not-imported",
    "message": "This project has AGENTS.md, but Claude Code reads CLAUDE.md and only imports files referenced from it.",
    "params": undefined,
    "suggestion": "Add @AGENTS.md to project CLAUDE.md if those shared instructions should apply to Claude Code.",
    "title": "Project CLAUDE.md does not import AGENTS.md",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:reference:user-agents-md-missing-import-10ybhud",
    "message": "missing-agents.md referenced by AGENTS.md does not exist.",
    "params": undefined,
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This is usually harmless. Remove stale directories if they are no longer useful.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:session:empty-project-dirs",
    "message": "1 empty project directories found in ~/.claude/projects/.",
    "params": undefined,
    "suggestion": "This is usually harmless. Remove stale directories if they are no longer useful.",
    "title": "Empty Claude project directories",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This can happen with partial or legacy transcripts.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:session:metadata-missing-gr07ts",
    "message": "orphan-session.jsonl is missing start time or project path metadata.",
    "params": undefined,
    "suggestion": "This can happen with partial or legacy transcripts.",
    "title": "Session metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:source:user-claude-md-missing",
    "message": "No user-level CLAUDE.md found.",
    "params": undefined,
    "suggestion": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
    "title": "User CLAUDE.md not found",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:project-mcp-empty-missing-transport",
    "message": "empty has no command, url, type, or transport field.",
    "params": undefined,
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code subagents",
    ],
    "fix": {
      "description": "Claude Code subagents require Markdown files with name and description frontmatter.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-agent-broken",
    "message": "broken is missing name or description frontmatter.",
    "params": undefined,
    "suggestion": "Claude Code subagents require Markdown files with name and description frontmatter.",
    "title": "Claude subagent metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-agent-missing-prompt",
    "message": "PreToolUse contains a agent hook without a prompt.",
    "params": undefined,
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a url value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-http-missing-url",
    "message": "PreToolUse contains an http hook without a url.",
    "params": undefined,
    "suggestion": "Add a url value or remove the hook entry.",
    "title": "Claude HTTP hook is missing url",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add both server and tool values, or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-mcp-tool-missing-tool",
    "message": "PreToolUse contains an mcp_tool hook without tool.",
    "params": undefined,
    "suggestion": "Add both server and tool values, or remove the hook entry.",
    "title": "Claude MCP tool hook is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-missing-command",
    "message": "PreToolUse contains a command hook without a command.",
    "params": undefined,
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Claude Code hook is missing command",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-prompt-missing-prompt",
    "message": "PreToolUse contains a prompt hook without a prompt.",
    "params": undefined,
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-unknown-type-frobnicate",
    "message": "PreToolUse uses hook type "frobnicate".",
    "params": undefined,
    "suggestion": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
    "title": "Claude hook type is not documented",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-mcp-notransport-missing-transport",
    "message": "noTransport has no command, url, type, or transport field.",
    "params": undefined,
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-skill-broken-skill-missing-entrypoint",
    "message": "broken-skill has no SKILL.md entrypoint.",
    "params": undefined,
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the JSON syntax in .claude/settings.json.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:syntax:project-settings-invalid",
    "message": "Expected property name or '}' in JSON at position 2 (line 1 column 3)",
    "params": undefined,
    "suggestion": "Fix the JSON syntax in .claude/settings.json.",
    "title": "Invalid project settings.json",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the file syntax, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:syntax:scan-error-1gptgwd",
    "message": "Trailing comma not allowed.",
    "params": undefined,
    "suggestion": "Fix the file syntax, then refresh Berth.",
    "title": "Scanner parser error",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Add the official Codex TOML schema comment near the top of config.toml.",
      "label": "Add Codex config schema",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-config-schema-comment-missing",
    "message": "config.toml does not include the official Codex TOML schema comment.",
    "params": undefined,
    "suggestion": "Add the Codex schema comment if you want editor validation for config.toml.",
    "title": "Codex config schema comment is not declared",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Remove async when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hook-stop-async-skipped",
    "message": "Codex parses async hook handlers, but async command hooks are not supported yet.",
    "params": undefined,
    "suggestion": "Remove async when this hook should run today.",
    "title": "Codex async hook is skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Use type = "command" when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hook-stop-skipped-type-prompt",
    "message": "Codex currently parses prompt hooks but only command hooks run.",
    "params": undefined,
    "suggestion": "Use type = "command" when this hook should run today.",
    "title": "Codex hook type is parsed but skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Keep both only if you expect Codex to merge and warn about this layer.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hooks-duplicated",
    "message": "Codex has hooks in config.toml and hooks.json at the same scope.",
    "params": undefined,
    "suggestion": "Keep both only if you expect Codex to merge and warn about this layer.",
    "title": "Codex hooks defined twice",
  },
  {
    "evidence": [
      "Codex AGENTS.md",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:reference:user-agents-md-missing-import-c05wrf",
    "message": "missing-codex.md referenced by AGENTS.md does not exist.",
    "params": undefined,
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Codex Windows and WSL homes",
    ],
    "fix": {
      "description": "Run Codex once, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:session:user-sessions-empty",
    "message": "Codex sessions directory exists but contains no rollout transcripts.",
    "params": undefined,
    "suggestion": "Run Codex once, then refresh Berth.",
    "title": "No Codex session transcripts found",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Codex custom agents require name, description, and developer_instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:structure:user-agent-broken",
    "message": "broken is missing name, description, or developer_instructions.",
    "params": undefined,
    "suggestion": "Codex custom agents require name, description, and developer_instructions.",
    "title": "Codex custom agent metadata is incomplete",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:structure:user-hook-notification-missing-command",
    "message": "Notification contains a command hook without a command.",
    "params": undefined,
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Codex hook is missing command",
  },
  {
    "evidence": [
      "Codex skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:structure:user-skill-codex-broken-skill-missing-entrypoint",
    "message": "codex-broken-skill has no SKILL.md entrypoint.",
    "params": undefined,
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Fix the TOML syntax in Codex config.toml.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:syntax:project-config-invalid",
    "message": "Invalid TOML document: incomplete key-value: cannot find end of key

1:  [mcp_servers.bad
     ^
2:  command = "bad"
",
    "params": undefined,
    "suggestion": "Fix the TOML syntax in Codex config.toml.",
    "title": "Invalid Codex config.toml",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Fix the file syntax, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:syntax:scan-error-sqe76g",
    "message": "Unexpected token at line 3.",
    "params": undefined,
    "suggestion": "Fix the file syntax, then refresh Berth.",
    "title": "Scanner parser error",
  },
]
`;

exports[`health i18n golden (GH #6 Phase-2 contract) > win32: full prose + emitted i18n keys/params 1`] = `
[
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Use this only for trusted local workflows.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:project-permission-bypass",
    "message": "permissionMode is set to bypassPermissions.",
    "params": undefined,
    "suggestion": "Use this only for trusted local workflows.",
    "title": "Claude Code bypass permissions enabled",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Remove shell or move the full command into command when shell selection matters.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-hook-shell-ignored-with-args",
    "message": "A command hook defines args and shell; Claude Code ignores shell in this shape.",
    "params": undefined,
    "suggestion": "Remove shell or move the full command into command when shell selection matters.",
    "title": "Claude hook shell is ignored when args are set",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Set "shell": "powershell" when the hook command is written for PowerShell.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-hook-windows-shell",
    "message": "A command hook is configured without shell: powershell on Windows.",
    "params": undefined,
    "suggestion": "Set "shell": "powershell" when the hook command is written for PowerShell.",
    "title": "Claude hook has no Windows shell hint",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Prefer narrower command allow rules.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-permission-broad-bash",
    "message": "permissions.allow contains Bash(*).",
    "params": undefined,
    "suggestion": "Prefer narrower command allow rules.",
    "title": "Broad Bash permission rule",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Add the official Claude Code settings schema near the top of the JSON file.",
      "label": "Add Claude settings schema",
    },
    "i18nKeys": undefined,
    "id": "claude-code:configuration:user-settings-schema-missing",
    "message": "settings.json does not declare the Claude Code settings JSON schema.",
    "params": undefined,
    "suggestion": "Add $schema if you want editor validation for Claude Code settings.",
    "title": "Claude settings schema is not declared",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Add a Claude memory import for the shared project instructions.",
      "label": "Import AGENTS.md",
    },
    "i18nKeys": undefined,
    "id": "claude-code:reference:project-agents-md-not-imported",
    "message": "This project has AGENTS.md, but Claude Code reads CLAUDE.md and only imports files referenced from it.",
    "params": undefined,
    "suggestion": "Add @AGENTS.md to project CLAUDE.md if those shared instructions should apply to Claude Code.",
    "title": "Project CLAUDE.md does not import AGENTS.md",
  },
  {
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:reference:user-agents-md-missing-import-10ybhud",
    "message": "missing-agents.md referenced by AGENTS.md does not exist.",
    "params": undefined,
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This is usually harmless. Remove stale directories if they are no longer useful.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:session:empty-project-dirs",
    "message": "1 empty project directories found in ~/.claude/projects/.",
    "params": undefined,
    "suggestion": "This is usually harmless. Remove stale directories if they are no longer useful.",
    "title": "Empty Claude project directories",
  },
  {
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:source:user-claude-md-missing",
    "message": "No user-level CLAUDE.md found.",
    "params": undefined,
    "suggestion": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
    "title": "User CLAUDE.md not found",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:project-mcp-empty-missing-transport",
    "message": "empty has no command, url, type, or transport field.",
    "params": undefined,
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code subagents",
    ],
    "fix": {
      "description": "Claude Code subagents require Markdown files with name and description frontmatter.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-agent-broken",
    "message": "broken is missing name or description frontmatter.",
    "params": undefined,
    "suggestion": "Claude Code subagents require Markdown files with name and description frontmatter.",
    "title": "Claude subagent metadata is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-agent-missing-prompt",
    "message": "PreToolUse contains a agent hook without a prompt.",
    "params": undefined,
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a url value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-http-missing-url",
    "message": "PreToolUse contains an http hook without a url.",
    "params": undefined,
    "suggestion": "Add a url value or remove the hook entry.",
    "title": "Claude HTTP hook is missing url",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add both server and tool values, or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-mcp-tool-missing-tool",
    "message": "PreToolUse contains an mcp_tool hook without tool.",
    "params": undefined,
    "suggestion": "Add both server and tool values, or remove the hook entry.",
    "title": "Claude MCP tool hook is incomplete",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-missing-command",
    "message": "PreToolUse contains a command hook without a command.",
    "params": undefined,
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Claude Code hook is missing command",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-prompt-missing-prompt",
    "message": "PreToolUse contains a prompt hook without a prompt.",
    "params": undefined,
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-hook-pretooluse-unknown-type-frobnicate",
    "message": "PreToolUse uses hook type "frobnicate".",
    "params": undefined,
    "suggestion": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
    "title": "Claude hook type is not documented",
  },
  {
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-mcp-notransport-missing-transport",
    "message": "noTransport has no command, url, type, or transport field.",
    "params": undefined,
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "evidence": [
      "Claude Code skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:structure:user-skill-broken-skill-missing-entrypoint",
    "message": "broken-skill has no SKILL.md entrypoint.",
    "params": undefined,
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the JSON syntax in .claude/settings.json.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "claude-code:syntax:project-settings-invalid",
    "message": "Expected property name or '}' in JSON at position 2 (line 1 column 3)",
    "params": undefined,
    "suggestion": "Fix the JSON syntax in .claude/settings.json.",
    "title": "Invalid project settings.json",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Add the official Codex TOML schema comment near the top of config.toml.",
      "label": "Add Codex config schema",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-config-schema-comment-missing",
    "message": "config.toml does not include the official Codex TOML schema comment.",
    "params": undefined,
    "suggestion": "Add the Codex schema comment if you want editor validation for config.toml.",
    "title": "Codex config schema comment is not declared",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Remove async when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hook-stop-async-skipped",
    "message": "Codex parses async hook handlers, but async command hooks are not supported yet.",
    "params": undefined,
    "suggestion": "Remove async when this hook should run today.",
    "title": "Codex async hook is skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Use type = "command" when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hook-stop-skipped-type-prompt",
    "message": "Codex currently parses prompt hooks but only command hooks run.",
    "params": undefined,
    "suggestion": "Use type = "command" when this hook should run today.",
    "title": "Codex hook type is parsed but skipped",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add commandWindows or command_windows when the command differs on Windows.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hook-windows-command",
    "message": "A command hook is configured without commandWindows on Windows.",
    "params": undefined,
    "suggestion": "Add commandWindows or command_windows when the command differs on Windows.",
    "title": "Codex hook has no Windows command override",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Keep both only if you expect Codex to merge and warn about this layer.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:configuration:user-hooks-duplicated",
    "message": "Codex has hooks in config.toml and hooks.json at the same scope.",
    "params": undefined,
    "suggestion": "Keep both only if you expect Codex to merge and warn about this layer.",
    "title": "Codex hooks defined twice",
  },
  {
    "evidence": [
      "Codex AGENTS.md",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:reference:user-agents-md-missing-import-c05wrf",
    "message": "missing-codex.md referenced by AGENTS.md does not exist.",
    "params": undefined,
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "evidence": [
      "Codex Windows and WSL homes",
    ],
    "fix": {
      "description": "Run Codex once, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:session:user-sessions-empty",
    "message": "Codex sessions directory exists but contains no rollout transcripts.",
    "params": undefined,
    "suggestion": "Run Codex once, then refresh Berth.",
    "title": "No Codex session transcripts found",
  },
  {
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Codex custom agents require name, description, and developer_instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:structure:user-agent-broken",
    "message": "broken is missing name, description, or developer_instructions.",
    "params": undefined,
    "suggestion": "Codex custom agents require name, description, and developer_instructions.",
    "title": "Codex custom agent metadata is incomplete",
  },
  {
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:structure:user-hook-notification-missing-command",
    "message": "Notification contains a command hook without a command.",
    "params": undefined,
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Codex hook is missing command",
  },
  {
    "evidence": [
      "Codex skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:structure:user-skill-codex-broken-skill-missing-entrypoint",
    "message": "codex-broken-skill has no SKILL.md entrypoint.",
    "params": undefined,
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Fix the TOML syntax in Codex config.toml.",
      "label": "Suggested fix",
    },
    "i18nKeys": undefined,
    "id": "codex:syntax:project-config-invalid",
    "message": "Invalid TOML document: incomplete key-value: cannot find end of key

1:  [mcp_servers.bad
     ^
2:  command = "bad"
",
    "params": undefined,
    "suggestion": "Fix the TOML syntax in Codex config.toml.",
    "title": "Invalid Codex config.toml",
  },
]
`;
